# IncubatorProposal

./: Challenge.hs  README.md  default.nix  proposal.cabal
c-ver/: Makefile  README.md  challenge.c
c-ver/inc/: graph.h  parser.h
c-ver/src/: graph.c  parser.c
